# plugin_qml_example

./: README.md
fudy/: CMakeLists.txt  FudyMenuBar.qml  HomeScreen.qml  MenuBarItem.qml  image.qrc  main.cpp  main.qml  qml.qrc
fudy/NoteScreen/: CMakeLists.txt
fudy/NoteScreen/my/plugin/example/: CMakeLists.txt  NoteScreen.cpp  NoteScreen.h  NoteScreen.qml  NoteScreenPlugin.cpp  NoteScreenPlugin.h  qmldir
fudy/NoteScreen/note_screen/: CMakeLists.txt  NoteScreen.cpp  NoteScreen.h  NoteScreen.qml  NoteScreenPlugin.cpp  NoteScreenPlugin.h  NoteScreenPlugin.qrc  StickNoteController.cpp  StickNoteController.h  StickNoteModel.cpp  StickNoteModel.h  qmldir
fudy/PlanScreen/: CMakeLists.txt
fudy/PlanScreen/plan_screen/: CMakeLists.txt  PlanScreen.cpp  PlanScreen.h  PlanScreenPlugin.cpp  PlanScreenPlugin.h  PlanScreenPlugin.qrc  qmldir
fudy/StylingComponents/: CMakeLists.txt  FudyColor.cpp  FudyColor.h  FudyFont.cpp  FudyFont.h
fudy/TodoScreen/: CMakeLists.txt
fudy/TodoScreen/todo_screen/: CMakeLists.txt  TodoScreen.cpp  TodoScreen.h  TodoScreen.qml  TodoScreenPlugin.cpp  TodoScreenPlugin.h  TodoScreenPlugin.qrc  qmldir
fudy/WorkspaceScreen/: CMakeLists.txt
fudy/WorkspaceScreen/workspace_screen/: CMakeLists.txt  WorkspaceScreen.cpp  WorkspaceScreen.h  WorkspaceScreenPlugin.cpp  WorkspaceScreenPlugin.h  WorkspaceScreenPlugin.qrc  qmldir
